# Click2Act

./: .gitignore  CLAUDE.md  GEMINI.md  INSTALLATION.md  README.md  pyproject.toml
.claude/memory/: MEMORY.md  feedback_code_editing.md  feedback_memory_location.md
.claude/plans/: research-architecture.md  research-todos.md
.cursor/rules/: click2act.mdc
configs/agents/: aguvis.yaml  halo2.yaml  holo2.yaml  ui_agile.yaml  ui_agile_quant.yaml  ui_zoomer_aguvis.yaml  uiagile.yaml  uivenus_ground_7b.yaml
configs/benchmarks/: androidcontrol.yaml  screenspotpro.yaml
docs/: 0_purposal.md  2026-03-30_init-search.md  2026-04-13_omniparser-init.md  2026-04-26_uiagile.md  2026_04_26_uiagile.md
docs/claude/: 2026-03-30_gui-agent-landscape-survey.md  2026-04-11_vision-models-budget-guide.md
docs/gemini/: 2026-03-30_init-search.md
docs/paper/: LiteratureReview.tex  methods.tex  paper.aux  (+7 more)
notebooks/: 00-smoke-check-omniparser.ipynb  01-smoke-check-aguvis.ipynb  02-smoke-check-ui-tars-2b.ipynb  03-smoke-check-halo2-4b.ipynb  05-load-explore-dataset-mmbench.ipynb  05-smoke-check-ui-venus-ground-7b.ipynb  06-load-explore-dataset-mind2web.ipynb  07-load-explore-aitw.ipynb  quick-calibration-set-from-screenspot-pro.ipynb
scripts/: download_dataset_aguvis_stage1.py  download_dataset_aguvis_stage2.py  download_dataset_aitw.py  download_dataset_mind2web.py  download_dataset_mmbench.py  download_dataset_screenspot.py  download_dataset_screenspot_pro.py  download_models.sh  serve_qwen_vl.py  upload_android_control_hf.py  zip_raw_android_control.py
src/: constants.py  utils.py
(+86 files in other folders)
